syntax = "proto3";

message SignInRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string refreshToken = 2;
  string expired = 3;
}

message RefreshTokenRequest {
  string refresh = 1;
}

message CreateRequest {
  string email = 1;
  string name = 2;
  string surname = 3;
  string patronymic = 4;
  string phone = 5;
}

message AdministratorMessage {
  string email = 1;
  string name = 2;
  string surname = 3;
  string patronymic = 4;
  string phone = 5;
  string id = 6;
  bool active = 7;
  string role = 8;
  string avatar = 9;
  string created = 10;
  string updated = 11;
}

message AdministratorsResponse {
  repeated AdministratorMessage administrators = 1;
}

message DeleteRequest {
  string administratorId = 1;
}

message Empty {}

message SetPasswordRequest {
  string email = 1;
  string verificationCode = 2;
  string password = 3;
}

service Administrators {
  rpc SignIn(SignInRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc Create(CreateRequest) returns (AdministratorMessage);
  rpc Update(AdministratorMessage) returns (AdministratorMessage);
  rpc Delete(DeleteRequest) returns (Empty);
  rpc GetList(Empty) returns (AdministratorsResponse);
  rpc SetPassword(SetPasswordRequest) returns (Empty);
}